--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>3.2.0</version>
+			<configuration>
+				<archive>
+					<manifest>
+						<mainClass>santader_dev_week.Application</mainClass>
+					</manifest>
+				</archive>
+			</configuration>
+		</plugin>
 		</plugins>
+
+
 	</build>
+
 
 </project>
